--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         </activity>
 
         <activity android:name=".MainActivity"/>
+        <activity android:name=".ui.home.HomeActivity"/>
 
         <provider
             android:name=".utils.ContextProvider"
