--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
         </activity>
 
         <activity android:name=".MainActivity"/>
-        <activity android:name=".ui.home.HomeActivity"/>
+        <activity android:name=".ui.main.MainActivity"/>
 
         <provider
             android:name=".utils.ContextProvider"
