--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,7 @@ dependencies {
     // optional - RxJava support for Room
     implementation "androidx.room:room-rxjava2:$room_version"
 
+
     def koin_version = "2.2.2"
     //koin for android
     implementation "org.koin:koin-android:$koin_version"
@@ -89,9 +90,17 @@ dependencies {
     //加载等待动画
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
 
+    //刷新
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+
+    //recyclerview adapter
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.6'
 
     //glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    def banner_version = "3.0.1"
+//    implementation "androidx.legacy:legacy-support-v4:$banner_version"
+    implementation "com.github.bingoogolapple:BGABanner-Android:$banner_version"
 }
