--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'kotlin-android-extensions'
     id 'kotlin-android'
     id 'kotlin-kapt'
 }
@@ -16,6 +17,10 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        ndk {
+            abiFilters "armeabi", "armeabi-v7a", "arm64-v8a"
+        }
     }
 
     buildTypes {
@@ -33,6 +38,14 @@ android {
     }
     buildFeatures {
         dataBinding true
+    }
+
+    packagingOptions {
+        pickFirst '**/libc++_shared.so'
+        doNotStrip "*/armeabi/libYTCommon.so"
+        doNotStrip "*/armeabi-v7a/libYTCommon.so"
+        doNotStrip "*/x86/libYTCommon.so"
+        doNotStrip "*/arm64-v8a/libYTCommon.so"
     }
 }
 
@@ -105,4 +118,6 @@ dependencies {
     implementation "com.github.bingoogolapple:BGABanner-Android:$banner_version"
 
     implementation 'com.afollestad.material-dialogs:commons:0.9.4.4'
+
+    implementation 'com.tencent.liteav:LiteAVSDK_TRTC:latest.release'
 }
