--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,14 @@
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
 
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -39,11 +47,14 @@
 
         <activity android:name=".MainActivity"/>
         <activity android:name=".ui.main.MainActivity"/>
+        <activity android:name=".videoCall.navigation.NavigationActivity"/>
 
         <provider
             android:name=".utils.ContextProvider"
             android:authorities="${applicationId}.contextprovider"
             android:exported="false" />
+
+
     </application>
 
 </manifest>
