--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     repositories {
         google()
         maven { url "https://jitpack.io" }
+        mavenCentral()
         jcenter()
     }
     dependencies {
@@ -19,6 +20,7 @@ allprojects {
     repositories {
         google()
         maven { url "https://jitpack.io" }
+        mavenCentral()
         jcenter()
     }
 }
