--- a/app/build.gradle
+++ b/app/build.gradle
@@ -132,10 +132,6 @@ dependencies {
     //material-dialog
     implementation 'com.afollestad.material-dialogs:commons:0.9.6.0'
 
-    //腾讯音视频通话
-
-    implementation 'com.tencent.liteav:LiteAVSDK_TRTC:8.6.10097'
-
     //Android工具包
     implementation 'com.blankj:utilcodex:1.30.6'
 
@@ -146,5 +142,9 @@ dependencies {
 
     //录音正弦波
     implementation 'com.github.Jay-Goo:WaveLineView:v1.0.4'
+
+    implementation 'com.github.CarGuo.GSYVideoPlayer:gsyVideoPlayer-java:v8.1.3-jitpack'
+    //根据你的需求ijk模式的so
+    implementation 'com.github.CarGuo.GSYVideoPlayer:gsyVideoPlayer-armv64:v8.1.3-jitpack'
 
 }
