--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     ext.kotlin_version = "1.4.30"
     repositories {
         google()
+        maven {url  "http://maven.rongcloud.cn/repository/maven-releases/"}
         maven { url "https://jitpack.io" }
         mavenCentral()
         jcenter()
@@ -19,6 +20,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        maven {url  "http://maven.rongcloud.cn/repository/maven-releases/"}
         maven { url "https://jitpack.io" }
         mavenCentral()
         jcenter()
