--- a/app/build.gradle
+++ b/app/build.gradle
@@ -145,8 +145,11 @@ dependencies {
     //录音正弦波
     implementation 'com.github.Jay-Goo:WaveLineView:v1.0.4'
 
+    implementation 'com.github.Armen101:AudioRecordView:1.0.5'
+
     implementation 'com.github.CarGuo.GSYVideoPlayer:gsyVideoPlayer-java:v8.1.3-jitpack'
     //根据你的需求ijk模式的so
     implementation 'com.github.CarGuo.GSYVideoPlayer:gsyVideoPlayer-armv64:v8.1.3-jitpack'
+
 
 }
