--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         android:theme="@style/Theme.LinWanAndroidmvvm"
         tools:ignore="UnusedAttribute"
         android:requestLegacyExternalStorage="true">
-        <activity android:name=".ui.login.LoginActivity">
+        <activity android:name=".ui.login.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
