--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,7 +60,9 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/provider_paths"/>
         </provider>
-
+        
+        <service android:name=".audioRecordService.RecordingService"/>
+        <receiver android:name=".audioRecordService.RecordingService$StopRecordingReceiver" />
 
     </application>
 
