--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,8 @@
 
         <activity android:name=".ui.main.MainActivity"/>
         <activity android:name=".videoCall.navigation.NavigationActivity"/>
-        <activity android:name=".audioRecord.AudioActivity"/>
+        <activity android:name=".audioRecord.AudioActivity"
+            android:launchMode="singleInstance"/>
         <activity android:name=".videoplayer.SimplePlayerActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"
             android:theme="@style/Theme.AppCompat.Full" />
