--- a/app/build.gradle
+++ b/app/build.gradle
@@ -152,5 +152,6 @@ dependencies {
     //根据你的需求ijk模式的so
     implementation 'com.github.CarGuo.GSYVideoPlayer:gsyVideoPlayer-armv64:v8.1.3-jitpack'
 
-
+    implementation 'com.github.iielse:imageviewer:2.1.8'
+    implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.10.0'
 }
