--- a/app/build.gradle
+++ b/app/build.gradle
@@ -152,6 +152,14 @@ dependencies {
     //根据你的需求ijk模式的so
     implementation 'com.github.CarGuo.GSYVideoPlayer:gsyVideoPlayer-armv64:v8.1.3-jitpack'
 
+    /**
+     * 图片浏览
+     */
     implementation 'com.github.iielse:imageviewer:2.1.8'
     implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.10.0'
+
+    // 单独添加核心 module Transferee, 之后至少还需要添加以下三种图片加载器中的一种
+    implementation 'com.github.Hitomis.transferee:Transferee:1.6.1'
+    // 添加 Glide 图片加载器
+    implementation 'com.github.Hitomis.transferee:GlideImageLoader:1.6.1'
 }
